# ChangeLog for app-emulation/x48
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/x48/ChangeLog,v 1.15 2007/12/25 15:37:11 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471. Assigning to
  maintainer-needed.

  22 Jul 2007; David Shakaryan <omp@gentoo.org> x48-0.4.3.ebuild,
  x48-0.4.3-r1.ebuild:
  Remove virtual/x11 from dependencies.

  25 Mar 2007; Raúl Porcel <armin76@gentoo.org> x48-0.4.3-r1.ebuild:
  Add ~ia64 wrt bug 132248

  25 Jan 2007; Marius Mauch <genone@gentoo.org> x48-0.4.3.ebuild,
  x48-0.4.3-r1.ebuild:
  Replacing einfo with elog

  25 Nov 2006; Guy Martin <gmsoft@gentoo.org> x48-0.4.3-r1.ebuild:
  Stable on hppa.

  10 Jul 2006; Thomas Cort <tcort@gentoo.org> x48-0.4.3-r1.ebuild:
  Stable on alpha.

  08 Jul 2006; Markus Rothe <corsair@gentoo.org> x48-0.4.3-r1.ebuild:
  Stable on ppc64

  11 May 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  x48-0.4.3-r1.ebuild:
  marking ~ppc since it's usable though self-test mode has oddities
  (see Bug #132248 for details)

  05 May 2006; Gustavo Zacarias <gustavoz@gentoo.org> x48-0.4.3-r1.ebuild:
  Keyworded ~sparc wrt #132248

  05 May 2006; Markus Rothe <corsair@gentoo.org> x48-0.4.3-r1.ebuild:
  Added ~ppc64; bug #132248

  05 May 2006; Joshua Jackson <tsunam@gentoo.org> x48-0.4.3-r1.ebuild:
  Stable on x86; bug #132248

  05 May 2006; <tcort@gentoo.org> x48-0.4.3-r1.ebuild:
  Added ~alpha keyword wrt Bug #132248.

  04 May 2006; Daniel Gryniewicz <dang@gentoo.org> x48-0.4.3-r1.ebuild:
  Marked ~amd64

*x48-0.4.3-r1 (26 Jan 2006)

  26 Jan 2006; Tavis Ormandy <taviso@gentoo.org> +x48-0.4.3-r1.ebuild:
  add version tha tincludes free-noncomm rom images

*x48-0.4.3 (26 Jan 2006)

  26 Jan 2006; Tavis Ormandy <taviso@gentoo.org> +metadata.xml,
  +x48-0.4.3.ebuild:
  initial import
